Fixed portfolioLink not showing, and edited the padding between links in navBar

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ nav {
 
 nav a {
     font-size: 2em;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     color: white;
 }
 
